# whole_body_control

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  Task.cpp  Task.hpp  TaskDescription.cpp  TaskDescription.hpp  controller_library.cpp  controller_library.hpp  opspace.cpp  opspace.hpp  robot.belt.wbc.launch  robot.wbc.launch  stack.xml  testTask.cpp  testTaskDescription.cpp
doc/: Doxyfile.in  mainpage.dox
include/opspace/: Behavior.hpp  Controller.hpp  ControllerNG.hpp  Factory.hpp  Parameter.hpp  Task.hpp  TaskFactory.hpp  TypeIOTGCursor.hpp  behavior_library.hpp  opspace.hpp  other_controllers.hpp  parse_yaml.hpp  task_library.hpp
reflexxes_otg/: CMakeLists.txt
reflexxes_otg/include/reflexxes_otg/: TypeIOTG.h  TypeIOTGInputParameters.h  TypeIOTGOutputParameters.h  TypeIOTGProfiles.h
reflexxes_otg/src/: TypeIOTG.cpp  TypeIOTGDecision.cpp  TypeIOTGMath.cpp  TypeIOTGPolynomial.cpp  TypeIOTGProfiles.cpp  trjgen.cpp
src/: Behavior.cpp  Controller.cpp  Factory.cpp  Parameter.cpp  Task.cpp  TaskFactory.cpp  behavior_library.cpp  controller_library.cpp  hello_world.cpp  opspace.cpp  other_controllers.cpp  parse_yaml.cpp  task_library.cpp  testBehaviorFactory.cpp  testFactory.cpp  testTask.cpp  testTaskFactory.cpp
wbc_core/: CMakeLists.txt  mainpage.dox  manifest.xml
wbc_core/include/wbc_core/: opspace_param_callbacks.hpp
wbc_core/src/: opspace_param_callbacks.cpp
wbc_m3_ctrl/: CMakeLists.txt  Makefile  README  mainpage.dox  manifest.xml
wbc_m3_ctrl/config/: calibrate.yaml  generic.yaml  hello_byebye.yaml  iros2011_exp2.yaml  m3_with_hand.xml  teleop.yaml
wbc_m3_ctrl/include/wbc_m3_ctrl/: foo.hpp  qh.h  rt_util.h  udp_util.h
wbc_m3_ctrl/src/: bar.cpp  calib.cpp  foo.cpp  rt_util.cpp  sendgoal.cpp  servo.cpp  teleop.cpp  test_rt_util.cpp  test_udp_util.cpp  udp_bridge.cpp  udp_util.cpp
wbc_msgs/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
wbc_msgs/msg/: ChannelFeedback.msg  DynamicModel.msg  IntegerChannel.msg  IntegerParamChannel.msg  MatrixChannel.msg  MatrixParamChannel.msg  OpspaceParameter.msg  RealChannel.msg  RealParamChannel.msg  StringChannel.msg  VectorChannel.msg  VectorParamChannel.msg
wbc_msgs/srv/: GetParameter.srv  ListParameters.srv  OpenChannel.srv  OpenParamChannel.srv  SetParameter.srv
wbc_opspace/: CMakeLists.txt  mainpage.dox  manifest.xml
wbc_opspace/include/wbc_opspace/: util.h
wbc_opspace/opspace/: CMakeLists.txt  README.md
wbc_opspace/opspace/attic/: Controller.cpp  Controller.hpp  controller_library.cpp
wbc_opspace/opspace/include/opspace/: Behavior.hpp  Controller.hpp  ControllerNG.hpp  Factory.hpp  Parameter.hpp  Skill.hpp  Task.hpp  TaskFactory.hpp  TypeIOTGCursor.hpp  behavior_library.hpp  controller_library.hpp  opspace.hpp  parse_yaml.hpp  skill_library.hpp  task_library.hpp
wbc_opspace/opspace/src/: Behavior.cpp  Controller.cpp  ControllerNG.cpp  Factory.cpp  Parameter.cpp  Skill.cpp  Task.cpp  TaskFactory.cpp  TypeIOTGCursor.cpp  behavior_library.cpp  controller_library.cpp  opspace.cpp  other_controllers.cpp  parse_yaml.cpp  skill_library.cpp  task_library.cpp  testFactory.cpp  testTask.cpp
wbc_opspace/src/: util.cpp
wbc_pr2_ctrl/: CMakeLists.txt  Makefile  manifest.xml
wbc_pr2_ctrl/attic/: chain.yaml  opspace_skills_tp_pd.yaml  pr2_task_posture_otg_plugin.launch  tao_tree_pr2.xml  tao_tree_pr2_base_and_head.xml  task_posture_gui.py  task_posture_otg_plugin.cpp  test_plugin.cpp  test_plugin.launch  test_plugin.yaml  wbc_plugin.cpp
wbc_pr2_ctrl/config/: chain.yaml  controller_plugins.xml  empty_gazebo.world  opspace_posture.yaml  opspace_skills.yaml  opspace_skills_exp1.yaml  pr2_left_arm_wbc.yaml  pr2_wbc.yaml  pump.yaml  pump_plugin.yaml  tao_tree_pr2_arms_only.xml  tao_tree_pr2_base_without_torso_and_head.xml  tao_tree_pr2_without_torso_without_head.xml  task_posture_otg_plugin.yaml  wbc_plugin.yaml
wbc_pr2_ctrl/include/wbc_pr2_ctrl/: mq_robot_api.h  opspace_planar_controller.h
wbc_pr2_ctrl/launch/: chain_gazebo.launch  chain_jspace.launch  chain_pump_plugin.launch  chain_task_posture_otg_plugin.launch  pr2_gazebo.launch  pr2_jspace.launch  pr2_left_arm_dynamic_model.launch  pr2_left_arm_dynamic_model_dump.launch  pr2_left_arm_jspace.launch  pr2_left_arm_pump.launch  pr2_left_arm_pump_plugin.launch  pr2_nonarm_controllers.launch  pr2_opspace.launch  pr2_pump.launch  pr2_pump_plugin.launch  pr2_wbc_plugin.launch
wbc_pr2_ctrl/msg/: ControllerInfo.msg  ControllerState.msg  OTGDebug.msg  PumpDebugCommand.msg  PumpDebugState.msg  TaskPostureOTGDebug.msg
wbc_pr2_ctrl/scripts/: mixer_gui.py  task_posture_gui.py
wbc_pr2_ctrl/src/: dynamic_model_dump_node.cpp  dynamic_model_node.cpp  jspace_servo.cpp  mq_robot_api.cpp  opspace_planar_controller.cpp  opspace_servo.cpp  pump.cpp  pump_plugin.cpp  task_posture_otg_plugin.cpp  wbc_plugin.cpp
wbc_pr2_ctrl/srv/: GetInfo.srv  GetParameter.srv  GetState.srv  PumpGetInfo.srv  SelectController.srv  SetGains.srv  SetGoal.srv  SetParameter.srv  TaskPostureUI.srv
wbc_pr2_ctrl/urdf/: chain.urdf.xacro
wbc_urdf/: CMakeLists.txt  mainpage.dox  manifest.xml
wbc_urdf/include/wbc_urdf/: Model.hpp
wbc_urdf/src/: Model.cpp  urdf_dump.cpp  urdf_to_tao.cpp  urdf_to_tao_node.cpp
wbc_uta_opspace/: CMakeLists.txt  mainpage.dox  manifest.xml
wbc_uta_opspace/uta_opspace/: CMakeLists.txt  ControllerNG.cpp  ControllerNG.hpp  DelayHistogram.cpp  HelloGoodbyeSkill.cpp  HelloGoodbyeSkill.hpp
